; ModuleID = '/home/carl/AnghaBench/linux/arch/s390/kernel/extr_kexec_image.c_s390_image_load.c'
source_filename = "/home/carl/AnghaBench/linux/arch/s390/kernel/extr_kexec_image.c_s390_image_load.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kimage = type { i32 }

@kexec_file_add_kernel_image = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.kimage*, i8*, i64, i8*, i64, i8*, i64)* @s390_image_load to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @s390_image_load(%struct.kimage* %0, i8* %1, i64 %2, i8* %3, i64 %4, i8* %5, i64 %6) #0 {
  %8 = alloca %struct.kimage*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i64, align 8
  store %struct.kimage* %0, %struct.kimage** %8, align 8
  store i8* %1, i8** %9, align 8
  store i64 %2, i64* %10, align 8
  store i8* %3, i8** %11, align 8
  store i64 %4, i64* %12, align 8
  store i8* %5, i8** %13, align 8
  store i64 %6, i64* %14, align 8
  %15 = load %struct.kimage*, %struct.kimage** %8, align 8
  %16 = load i32, i32* @kexec_file_add_kernel_image, align 4
  %17 = call i8* @kexec_file_add_components(%struct.kimage* %15, i32 %16)
  ret i8* %17
}

declare dso_local i8* @kexec_file_add_components(%struct.kimage*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
